...
    // error message notification
    val state = remember { SnackbarHostState() }
    SnackbarHost(
        hostState = remember { state },
        modifier = Modifier
            .fillMaxWidth()
            .testTag("snackbarHost"),
    )

    // use column to stack the username, password, and login button
    Column(
        modifier =
        Modifier
...
            // username field
            TextField(
                singleLine = true,
                value = username,
                onValueChange = { username = it },
                label = { Text("Username") },
                modifier = Modifier.testTag("usernameField"),
            )

            // password field
            TextField(
                singleLine = true,
                value = password,
                onValueChange = { password = it },
                label = { Text("Password") },
                modifier = Modifier.testTag("passwordField"),
            )

            // forgot login hint
            Text(
                text = "Forgot login? Click for a hint.",
                textDecoration = TextDecoration.Underline,
                modifier = Modifier
                    .clickable { viewModel.getHint() }
                    .testTag("hintLink"),
            )
        }

        // login button
        Button(
            onClick = {
                Log.d("LoginButton", "B: $username, $password")
                viewModel.tryLogin(username, password)
            },
            modifier = Modifier
                .fillMaxWidth(.9f)
                .testTag("loginButton"),
        ) {
            Text(text = "Login")
        }

        // handle login attempts
        LaunchedEffect(loginSuccess) {
...
