...
        ) {
            GlideImage(
                model = car.image,
                contentDescription = "Car Image",
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("carCardImage"),
                contentScale = ContentScale.Fit,
                loading = placeholder(R.drawable.ic_car_black),
                failure = placeholder(R.drawable.ic_car_black),
            )
        }

...
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Text(
                text = "${car.year} ${car.make} ${car.name}",
                fontSize = 18.sp,
                color = Color.Black,
                modifier = Modifier.testTag("carInformation")
            )
        }
    }

}

