<resources>
    <string name="app_name">CarSpec</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="no_favorites">No Favorite Cars Yet!</string>
</resources>